--- a/CodeBeam.MudBlazor.Extensions/Components/ComboBox/MudComboBox.razor
+++ b/CodeBeam.MudBlazor.Extensions/Components/ComboBox/MudComboBox.razor
@@ -4,7 +4,7 @@
 @using MudExtensions.Services
 @typeparam T
 @inherits MudBaseInputExtended<T>
-@inject IKeyInterceptorFactory KeyInterceptorFactory
+@inject IKeyInterceptorService KeyInterceptorService
 @inject IScrollManagerExtended ScrollManagerExtended
 
 <CascadingValue Name="Standalone" Value="false" IsFixed="true">
